<resources>
    <string name="app_name">OnlineShopping</string>
    <string name="title_home">Home</string>
    <string name="all">All</string>
    <string name="for_you">For you</string>
    <string name="category">Categories</string>
    <string name="top_charts">Top charts</string>
    <string name="cart">cart</string>
    <string name="account">account</string>
    <string name="brand">Brand</string>
    <string name="brand_list" translatable="false">Brand List</string>
    <string name="product">Product</string>
    <string name="add">Add</string>
    <string name="tell_us_your_experience">Tell us your experience</string>
    <string name="send">send</string>
    <string name="filter">filter</string>
    <string name="apply">apply</string>
    <string name="clear">clear</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="checkout">Checkout</string>
    <string name="_0">0</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="shipping_address">Shipping Adress</string>
    <string name="wishlist">Wishlist</string>
    <string name="order_history">Order History</string>
    <string name="track_order">Track Order</string>
    <string name="cards">Cards</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">-OR-</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="verification">Verification</string>
    <string name="a_6_digit_pin_has_been_sent_to_your_email_address_enter_it_below_to_continue">A 6 - Digit PIN has been sent to your email address, enter it below to continue</string>
    <string name="continues">CONTINUE</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="registration">Registration</string>
    <string name="write_your">Write your</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="delete">delete</string>
    <string name="cd_home">home</string>
    <string name="cd_cart">cart</string>
    <string name="cd_account">account</string>
    <string name="price">price</string>
    <string name="success">success</string>
    <string name="close">close</string>
    <string name="successfull_added">Successful added</string>
    <string name="next">next</string>
    <string name="back">back</string>
    <string name="phone_number">phone number</string>
    <string name="enter">ENTER</string>
    <string name="information">write your phone number</string>
    <string name="get_code">get code</string>
    <string name="last_name">Last Name</string>
    <string name="skip">skip</string>
    <string name="username">username</string>
    <string name="_998">+998</string>
    <string name="card_holder">Card holder</string>
    <string name="expiry">Expiry</string>
    <string name="new_">New</string>
    <string name="cancel">cancel</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="save">save</string>
    <string name="search">search</string>
    <string name="home_address">Home Address</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="payment">Payment</string>
    <string name="change">change</string>
    <string name="log_out">Log Out</string>
    <string name="total">total</string>
    <string name="pay">pay</string>
    <string name="taxes_15000">taxes.........................15000 so\'m</string>
    <string name="help">help</string>
</resources>
