<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            layout="@layout/card_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/it_name_card"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/name_on_card">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/it_card_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/card_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="19" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/it_expiry"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/expiry_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_expiry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:maxLength="5" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:elevation="4dp"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:background="#EADFDF"
            android:text="@string/cancel"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:background="@color/colorPrice"
            android:text="@string/save"
            android:textColor="#F3EAEA"
            android:textSize="16sp" />
    </FrameLayout>
</RelativeLayout>