<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#000"
        android:textSize="26sp"
        android:textStyle="bold"
        tools:text="Nike Dri-FIT Long Sleeve" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/details" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_product_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        tools:text="Nike Dri-FIT is a polyester fabric designed to help you keep dry so you can more comfortably work harder, longer. Read More" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/reviews" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_write_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrice"
        android:textSize="14sp"
        android:text="@string/write_your" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/review_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/review_item" />
</LinearLayout>