<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#fff"
        android:elevation="6dp"
        android:src="@drawable/ic_favorite_border_black_24dp"
        app:layout_constraintBottom_toTopOf="@id/success_linear"
        app:layout_constraintEnd_toEndOf="@id/success_linear"
        app:layout_constraintStart_toStartOf="@id/success_linear"
        app:layout_constraintTop_toTopOf="@id/success_linear" />

    <LinearLayout
        android:id="@+id/success_linear"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@drawable/success_layout_back"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="60dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:textColor="#343434"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/successfull_added"
            android:textColor="#343434"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/success_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#00f"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/close"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>